[package]
name = "merkle-patricia-forestry"
version = "1.3.1"
edition = "2021"
authors = ["Rust Port"]
description = "Merkle Patricia Forestry implementation in Rust"
license = "MPL-2.0"

[dependencies]
blake2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
sled = "0.34"  # Similar to LevelDB for persistent storage
ciborium = "0.2"  # CBOR encoding/decoding

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
